--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.5",
     "@radix-ui/react-popover": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.475.0",
     "moment": "^2.29.4",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.1",
