--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "@radix-ui/react-popover": "^1.1.2",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.7",
+    "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
@@ -29,8 +31,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^4.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.8",
     "vite": "^6.0.3"
   }
 }
